# can-jyut

./: .coverage  LICENSE  build.py  can-jyut.bat  config.json  plugin.txt  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  setup.cfg
locales/: base.pot
locales/zh_CN/LC_MESSAGES/: base.mo  base.po
locales/zh_HK/LC_MESSAGES/: base.mo  base.po
src/: main.py
src/can_jyut/: __init__.py  can_jyut.py  cli.py  translate.py  ust.py
src/can_jyut.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_accuracy.py  test_cli.py  test_fenci.py  test_input.py
tests/format_v/: format_v.py
tests/test_ust/changed/: convert-skip.ust  convert.ust  input-skip.ust  input-skip2.ust  input.ust
tests/test_ust/compare/: convert-skip.ust  convert.ust  input-skip.ust  input-skip2.ust  input.ust
tests/test_ust/original/: convert-skip.ust  convert.ust  input-skip.ust  input-skip2.ust  input.ust
