[metadata]
name = can_jyut
description = kanji to jyutping
author = RibosomeK
license = MIT


[options]
pacages = can_jyut
install_requires = 
    fenci
python_requires = >=3.11
package_dir = =src
zip_safe = no

[options.extras_require]
testing = 
    pytest
    pytest-cov
    mypy
    black
    tox

[options.package_data]
can_jyut = py.typed
